# raedam

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  config.json  docker-compose.yml  pyproject.toml  server.py  spots.json  test_model-yolov.py  test_model.py  util.py
detector/: __init__.py
env/: secrets.env.default
etc/nginx/: raedam.conf
etc/nginx/snippets/: proxy.conf
etc/supervisor/: raedam.conf
raedamdjango/: BADauth.sql
raedamdjango/cameras/: models.py  urls.py  views.py
raedamdjango/cameras/migrations/: 0001_initial.py
raedamdjango/cerebro/: __init__.py
raedamdjango/core/: admin.py  model_utils.py  models.py  settings.py  urls.py  utils.py  view_utils.py  views.py  wsgi.py
raedamdjango/core/middleware/: tenant_middleware.py
raedamdjango/core/migrations/: 0001_initial.py
raedamdjango/parking/: models.py  urls.py  views.py
raedamdjango/parking/migrations/: 0001_initial.py  0002_parkingcamera_is_active.py
raedamdjango/pederastian_detector/: apps.py  models.py  urls.py  views.py
raedamdjango/pederastian_detector/migrations/: 0001_initial.py
raedamdjango/pedestrian_detector/: apps.py  models.py  urls.py  views.py
raedamdjango/pedestrian_detector/migrations/: 0001_initial.py
raedamdjango/static/: main.css
raedamdjango/templates/cam/: cam_add.html  cam_delete.html  cam_list.html
raedamdjango/templates/core/: base.html  navigation.html
raedamdjango/templates/parking/: cam_add.html  cam_delete.html  cam_list.html  home.html  manage_spots.html
templates/: base.html  index.html
(+6 files in other folders)
