[tool.poetry]
name = "raedam"
version = "0.1.0"
description = "Camera management platform"
authors = ["Jose B <jose.zdy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
geopy = "^1.20.0"
mrcnn = "^0.2"
psycopg2-binary = "^2.8.4"
keras = "==2.2.4"
django-crispy-forms = "^1.8.1"
scikit-image = "^0.16.2"
django = "2.2"
django-tenant-schemas = "^1.10.0"
python-dotenv = "^0.10.3"
tensorflow = "==1.13.1"
opencv-python = "^4.1.2"
numpy = "==1.16.4"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.3"
django-debug-toolbar = "^2.1"
django-extensions = "^2.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
